btrfs: fix block group refcount race in btrfs_create_pending_block_groups() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8789,6 +8789,7 @@
 	patches.kernel.org/6.12.40-138-efivarfs-Fix-memory-leak-of-efivarfs_fs_info-.patch
 	patches.kernel.org/6.12.40-139-sched-Change-nr_uninterruptible-type-to-unsig.patch
 	patches.kernel.org/6.12.40-140-clone_private_mnt-make-sure-that-caller-has-C.patch
+	patches.kernel.org/6.12.40-141-btrfs-fix-block-group-refcount-race-in-btrfs_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
