--- a/series.conf
+++ b/series.conf
@@ -8769,6 +8769,7 @@
 	patches.kernel.org/6.12.40-118-net-mlx5-Correctly-set-gso_size-when-LRO-is-u.patch
 	patches.kernel.org/6.12.40-119-ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delr.patch
 	patches.kernel.org/6.12.40-120-net-fix-segmentation-after-TCP-UDP-fraglist-G.patch
+	patches.kernel.org/6.12.40-121-netfilter-nf_conntrack-fix-crash-due-to-remov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
