--- a/series.conf
+++ b/series.conf
@@ -8708,6 +8708,7 @@
 	patches.kernel.org/6.12.40-057-net-stmmac-intel-populate-entire-system_count.patch
 	patches.kernel.org/6.12.40-058-net-libwx-remove-duplicate-page_pool_put_full.patch
 	patches.kernel.org/6.12.40-059-net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
+	patches.kernel.org/6.12.40-060-net-libwx-properly-reset-Rx-ring-descriptor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
