--- a/series.conf
+++ b/series.conf
@@ -8665,6 +8665,7 @@
 	patches.kernel.org/6.12.40-014-Revert-staging-vchiq_arm-Create-keep-alive-th.patch
 	patches.kernel.org/6.12.40-015-nvmem-imx-ocotp-fix-MAC-address-byte-length.patch
 	patches.kernel.org/6.12.40-016-nvmem-layouts-u-boot-env-remove-crc32-endiann.patch
+	patches.kernel.org/6.12.40-017-Input-xpad-set-correct-controller-type-for-Ac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
