--- a/series.conf
+++ b/series.conf
@@ -8804,6 +8804,7 @@
 	patches.kernel.org/6.12.40-153-i2c-omap-fix-deprecated-of_property_read_bool.patch
 	patches.kernel.org/6.12.40-154-sched-freezer-Remove-unnecessary-warning-in-_.patch
 	patches.kernel.org/6.12.40-155-drm-xe-mocs-Initialize-MOCS-index-early.patch
+	patches.kernel.org/6.12.40-156-drm-xe-Move-page-fault-init-after-topology-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
