drm/gem: Test for imported GEM buffers with helper (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7421,6 +7421,7 @@
 	patches.suse/drm-bridge-Fix-spelling-mistake-gettin-getting.patch
 	patches.suse/drm-rockchip-vop2-Add-uv-swap-for-cluster-window.patch
 	patches.suse/drm-panthor-Update-CS_STATUS_-defines-to-correct-val.patch
+	patches.suse/drm-gem-Test-for-imported-GEM-buffers-with-helper.patch
 	patches.suse/drm-amdgpu-remove-all-KFD-fences-from-the-BO-on-rele.patch
 	patches.suse/drm-amd-display-fix-an-indent-issue-in-DML21.patch
 	patches.suse/drm-amd-display-Temporarily-disable-hostvm-on-DCN31.patch
