accel/ivpu: Fix warning in ivpu_gem_bo_free() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9672,6 +9672,7 @@
 	patches.suse/drm-panel-simple-fix-the-warnings-for-the-Evervision.patch
 	patches.suse/accel-ivpu-Use-dma_resv_lock-instead-of-a-custom-mut.patch
 	patches.suse/accel-ivpu-Trigger-device-recovery-on-engine-reset-r.patch
+	patches.suse/accel-ivpu-Fix-warning-in-ivpu_gem_bo_free.patch
 	patches.suse/video-screen_info-Update-framebuffers-behind-PCI-bri.patch
 	patches.suse/sysfb-Fix-screen_info-type-check-for-VGA.patch
 	patches.suse/misc-tps6594-pfsm-Add-NULL-pointer-check-in-tps6594_.patch
