- drm/i915/dp_mst: Work around Thunderbolt sink disconnect after   SINK_COUNT_ESI read (stable-fixes). - blacklist.conf: drop incorrect entry

--- a/series.conf
+++ b/series.conf
@@ -53876,6 +53876,7 @@
 	patches.suse/drm-msm-a6xx-Disable-rgb565_predicator-on-Adreno-7c3.patch
 	patches.suse/drm-msm-dpu-Clear-CTL_FETCH_PIPE_ACTIVE-on-ctl_path-.patch
 	patches.suse/drm-msm-dpu-Clear-CTL_FETCH_PIPE_ACTIVE-before-blend.patch
+	patches.suse/drm-i915-dp_mst-Work-around-Thunderbolt-sink-disconn.patch
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
 	patches.suse/ext4-inline-fix-len-overflow-in-ext4_prepare_inline_.patch
 	patches.suse/ext4-fix-calculation-of-credits-for-extent-tree-modi.patch
