drm/i915/dp_mst: Work around Thunderbolt sink disconnect after SINK_COUNT_ESI read (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9096,6 +9096,7 @@
 	patches.suse/drm-msm-dpu-enable-SmartDMA-on-SC8180X.patch
 	patches.suse/drm-msm-gpu-Fix-crash-when-throttling-GPU-immediatel.patch
 	patches.suse/drm-msm-a6xx-Disable-rgb565_predicator-on-Adreno-7c3.patch
+	patches.suse/drm-i915-dp_mst-Work-around-Thunderbolt-sink-disconn.patch
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
 	patches.suse/NFSD-unregister-filesystem-in-case-genl_register_family-fails.patch
 	patches.suse/NFSD-fix-race-between-nfsd-registration-and-exports_proc.patch
