iio: adc: dln2: Use aligned_s64 for timestamp (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8603,6 +8603,7 @@
 	patches.suse/iio-chemical-pms7003-use-aligned_s64-for-timestamp.patch
 	patches.suse/iio-temp-maxim-thermocouple-Fix-potential-lack-of-DM.patch
 	patches.suse/iio-accel-adxl355-Make-timestamp-64-bit-aligned-usin.patch
+	patches.suse/iio-adc-dln2-Use-aligned_s64-for-timestamp.patch
 	patches.suse/staging-iio-adc-ad7816-Correct-conditional-logic-for.patch
 	patches.suse/iio-adc-ad7606-fix-serial-register-access.patch
 	patches.suse/iio-adis16201-Correct-inclinometer-channel-resolutio.patch
