--- a/series.conf
+++ b/series.conf
@@ -8605,6 +8605,7 @@
 	patches.suse/iio-accel-adxl355-Make-timestamp-64-bit-aligned-usin.patch
 	patches.suse/iio-adc-dln2-Use-aligned_s64-for-timestamp.patch
 	patches.suse/iio-adc-ad7768-1-Fix-insufficient-alignment-of-times.patch
+	patches.suse/iio-adc-ad7266-Fix-potential-timestamp-alignment-iss.patch
 	patches.suse/staging-iio-adc-ad7816-Correct-conditional-logic-for.patch
 	patches.suse/iio-adc-ad7606-fix-serial-register-access.patch
 	patches.suse/iio-adis16201-Correct-inclinometer-channel-resolutio.patch
