iio: chemical: sps30: use aligned_s64 for timestamp (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8599,6 +8599,7 @@
 	patches.suse/iio-adc-rockchip-Fix-clock-initialization-sequence.patch
 	patches.suse/iio-light-opt3001-fix-deadlock-due-to-concurrent-fla.patch
 	patches.suse/iio-imu-inv_mpu6050-align-buffer-for-timestamp.patch
+	patches.suse/iio-chemical-sps30-use-aligned_s64-for-timestamp.patch
 	patches.suse/iio-temp-maxim-thermocouple-Fix-potential-lack-of-DM.patch
 	patches.suse/staging-iio-adc-ad7816-Correct-conditional-logic-for.patch
 	patches.suse/iio-adc-ad7606-fix-serial-register-access.patch
