iio: pressure: mprls0025pa: use aligned_s64 for timestamp (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8607,6 +8607,7 @@
 	patches.suse/iio-adc-ad7768-1-Fix-insufficient-alignment-of-times.patch
 	patches.suse/iio-adc-ad7266-Fix-potential-timestamp-alignment-iss.patch
 	patches.suse/staging-iio-adc-ad7816-Correct-conditional-logic-for.patch
+	patches.suse/iio-pressure-mprls0025pa-use-aligned_s64-for-timesta.patch
 	patches.suse/iio-adc-ad7606-fix-serial-register-access.patch
 	patches.suse/iio-adis16201-Correct-inclinometer-channel-resolutio.patch
 	patches.suse/msft-hv-3236-uio_hv_generic-Fix-sysfs-creation-path-for-ring-buff.patch
