PM: EM: use kfree_rcu() to simplify the code (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6777,6 +6777,7 @@
 	patches.suse/cpuidle-menu-Eliminate-outliers-on-both-ends-of-the-sample-set.patch
 	patches.suse/cpuidle-menu-Avoid-discarding-useful-information.patch
 	patches.suse/cpuidle-menu-Update-documentation-after-get_typical_interval-changes.patch
+	patches.suse/PM-EM-use-kfree_rcu-to-simplify-the-code.patch
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
