--- a/series.conf
+++ b/series.conf
@@ -6741,6 +6741,7 @@
 	patches.suse/PNP-Expand-length-of-fixup-id-string.patch
 	patches.suse/ACPI-thermal-Fix-stale-comment-regarding-trip-points.patch
 	patches.suse/ACPI-HED-Always-initialize-before-evged.patch
+	patches.suse/pm-cpupower-bench-Prevent-NULL-dereference-on-malloc.patch
 	patches.suse/cpufreq-amd-pstate-Modify-the-min_perf-calculation-in-adjust_perf-callback.patch
 	patches.suse/cpufreq-amd-pstate-Remove-the-redundant-des_perf-clamping-in-adjust_perf.patch
 	patches.suse/cpufreq-amd-pstate-Pass-min-max_limit_perf-as-min-max_perf-to-amd_pstate_update.patch
