--- a/series.conf
+++ b/series.conf
@@ -9610,6 +9610,7 @@
 	patches.suse/PCI-dwc-Make-link-training-more-robust-by-setting-PO.patch
 	patches.suse/PCI-imx6-Add-workaround-for-errata-ERR051624.patch
 	patches.suse/PCI-rcar-gen4-set-ep-BAR4-fixed-size.patch
+	patches.suse/phy-rockchip-samsung-hdptx-Fix-clock-ratio-setup.patch
 	patches.suse/phy-qcom-qmp-usb-Fix-an-NULL-vs-IS_ERR-bug.patch
 	patches.suse/dmaengine-xilinx_dma-Set-dma_device-directions.patch
 	patches.suse/dmaengine-idxd-Check-availability-of-workqueue-alloc.patch
