mailbox: Not protect module_put with spin_lock_irqsave (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9516,6 +9516,7 @@
 	patches.suse/overflow-Introduce-__DEFINE_FLEX-for-having-no-initi.patch
 	patches.suse/mailbox-imx-Fix-TXDB_V2-sending.patch
 	patches.suse/mailbox-mtk-cmdq-Refine-GCE_GCTL_VALUE-setting.patch
+	patches.suse/mailbox-Not-protect-module_put-with-spin_lock_irqsav.patch
 	patches.suse/mtd-nand-ecc-mxic-Fix-use-of-uninitialized-variable-.patch
 	patches.suse/mtd-rawnand-qcom-Fix-read-len-for-onfi-param-page.patch
 	patches.suse/mtd-spinand-esmt-fix-id-code-for-F50D1G41LB.patch
