mailbox: pcc: Use acpi_os_ioremap() instead of ioremap() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7653,6 +7653,7 @@
 	patches.suse/mailbox-use-error-ret-code-of-of_parse_phandle_with_.patch
 	patches.suse/mailbox-pcc-Fix-the-possible-race-in-updation-of-cha.patch
 	patches.suse/mailbox-pcc-Always-clear-the-platform-ack-interrupt-.patch
+	patches.suse/mailbox-pcc-Use-acpi_os_ioremap-instead-of-ioremap.patch
 	patches.suse/selftests-bpf-Fix-freplace_link-segfault-in-tailcall.patch
 	patches.suse/selftests-bpf-Define-SYS_PREFIX-for-powerpc.patch
 	patches.suse/selftests-bpf-Select-NUMA_NO_NODE-to-create-map.patch
