objtool, lkdtm: Obfuscate the do_nothing() pointer (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7878,6 +7878,7 @@
 	patches.suse/objtool-panic-Disable-SMAP-in-__stack_chk_fail.patch
 	patches.suse/objtool-ASoC-codecs-wcd934x-Remove-potential-undefin.patch
 	patches.suse/objtool-regulator-rk808-Remove-potential-undefined-b.patch
+	patches.suse/objtool-lkdtm-Obfuscate-the-do_nothing-pointer.patch
 	patches.suse/objtool-Fix-segfault-in-ignore_unreachable_insn.patch
 	patches.suse/objtool-Silence-more-KCOV-warnings-part-2.patch
 	patches.suse/objtool-Ignore-end-of-section-jumps-for-KCOV-GCOV.patch
