objtool, ASoC: codecs: wcd934x: Remove potential undefined behavior in wcd934x_slim_irq_handler() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7876,6 +7876,7 @@
 	patches.suse/objtool-nvmet-Fix-out-of-bounds-stack-access-in-nvme.patch
 	patches.suse/objtool-media-dib8000-Prevent-divide-by-zero-in-dib8.patch
 	patches.suse/objtool-panic-Disable-SMAP-in-__stack_chk_fail.patch
+	patches.suse/objtool-ASoC-codecs-wcd934x-Remove-potential-undefin.patch
 	patches.suse/objtool-Fix-segfault-in-ignore_unreachable_insn.patch
 	patches.suse/objtool-Silence-more-KCOV-warnings-part-2.patch
 	patches.suse/objtool-Ignore-end-of-section-jumps-for-KCOV-GCOV.patch
