--- a/series.conf
+++ b/series.conf
@@ -7877,6 +7877,7 @@
 	patches.suse/objtool-media-dib8000-Prevent-divide-by-zero-in-dib8.patch
 	patches.suse/objtool-panic-Disable-SMAP-in-__stack_chk_fail.patch
 	patches.suse/objtool-ASoC-codecs-wcd934x-Remove-potential-undefin.patch
+	patches.suse/objtool-regulator-rk808-Remove-potential-undefined-b.patch
 	patches.suse/objtool-Fix-segfault-in-ignore_unreachable_insn.patch
 	patches.suse/objtool-Silence-more-KCOV-warnings-part-2.patch
 	patches.suse/objtool-Ignore-end-of-section-jumps-for-KCOV-GCOV.patch
