--- a/series.conf
+++ b/series.conf
@@ -7652,6 +7652,7 @@
 	patches.suse/mailbox-tegra-hsp-Define-dimensioning-masks-in-SoC-d.patch
 	patches.suse/mailbox-use-error-ret-code-of-of_parse_phandle_with_.patch
 	patches.suse/mailbox-pcc-Fix-the-possible-race-in-updation-of-cha.patch
+	patches.suse/mailbox-pcc-Always-clear-the-platform-ack-interrupt-.patch
 	patches.suse/selftests-bpf-Fix-freplace_link-segfault-in-tailcall.patch
 	patches.suse/selftests-bpf-Define-SYS_PREFIX-for-powerpc.patch
 	patches.suse/selftests-bpf-Select-NUMA_NO_NODE-to-create-map.patch
