bus: firewall: Fix missing static inline annotations for stubs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9491,6 +9491,7 @@
 	patches.suse/acpi-cpufreq-Fix-nominal_freq-units-to-KHz-in-get_ma.patch
 	patches.suse/efi-libstub-Describe-missing-out-parameter-in-efi_lo.patch
 	patches.suse/firmware-arm_scmi-Ensure-that-the-message-id-support.patch
+	patches.suse/bus-firewall-Fix-missing-static-inline-annotations-f.patch
 	patches.suse/Revert-bus-ti-sysc-Probe-for-l4_wkup-and-l4_cfg-inte.patch
 	patches.suse/soc-qcom-smp2p-Fix-fallback-to-qcom-ipc-parse.patch
 	patches.suse/soc-qcom-pmic_glink_altmode-fix-spurious-DP-hotplug-.patch
