drm/gem: Internally test import_attach for imported objects (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8315,6 +8315,7 @@
 	patches.suse/drm-v3d-Fix-Indirect-Dispatch-configuration-for-V3D-.patch
 	patches.suse/accel-ivpu-Fix-the-NPU-s-DPU-frequency-calculation.patch
 	patches.suse/dma-buf-sw_sync-Decrement-refcount-on-error-in-sw_sy.patch
+	patches.suse/drm-gem-Internally-test-import_attach-for-imported-o.patch
 	patches.suse/drm-mgag200-Fix-value-in-VBLKSTR-register.patch
 	patches.suse/drm-xe-Set-LRC-addresses-before-guc-load.patch
 	patches.suse/drm-xe-userptr-fix-notifier-vs-folio-deadlock.patch
