--- a/series.conf
+++ b/series.conf
@@ -8442,6 +8442,7 @@
 	patches.suse/mmc-renesas_sdhi-Fix-error-handling-in-renesas_sdhi_.patch
 	patches.suse/kernel-param-rename-locate_module_kobject.patch
 	patches.suse/kernel-globalize-lookup_or_create_module_kobject.patch
+	patches.suse/drivers-base-handle-module_kobject-creation.patch
 	patches.suse/btrfs-adjust-subpage-bit-start-based-on-sectorsize.patch
 	patches.suse/wifi-iwlwifi-don-t-warn-if-the-NIC-is-gone-in-resume.patch
 	patches.suse/wifi-iwlwifi-fix-the-check-for-the-SCRATCH-register-.patch
