x86/mce/amd: Add default names for MCA banks and blocks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10048,6 +10048,7 @@
 	patches.suse/Revert-ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/x86-mce-amd-Add-default-names-for-MCA-banks-and-blocks.patch
 	patches.suse/perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock-protected-region.patch
 	patches.suse/perf-Revert-to-requiring-CAP_SYS_ADMIN-for-uprobes.patch
 	patches.suse/objtool-Add-missing-endian-conversion-to-read_annotate.patch
