--- a/series.conf
+++ b/series.conf
@@ -9956,6 +9956,7 @@
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/perf-aux-Fix-pending-disable-flow-when-the-AUX-ring-buffer.patch
+	patches.suse/x86-traps-Initialize-DR6-by-writing-its-architectural-rese.patch
 	patches.suse/vt-add-missing-notification-when-switching-back-to-t.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
