--- a/series.conf
+++ b/series.conf
@@ -9819,6 +9819,7 @@
 	patches.suse/pidfs-never-refuse-ppid-0-in-PIDFD_GET_INFO.patch
 	patches.suse/powerpc-eeh-Fix-missing-PE-bridge-reconfiguration-du.patch
 	patches.suse/x86-virt-tdx-Avoid-indirect-calls-to-TDX-assembly-function.patch
+	patches.suse/x86-mm-pat-don-t-collapse-pages-without-PSE-set.patch
 	patches.suse/x86-Kconfig-only-enable-ROX-cache-in-execmem-when-STRICT_M.patch
 	patches.suse/x86-its-explicitly-manage-permissions-for-ITS-pages.patch
 	patches.suse/Revert-mm-execmem-Unify-early-execmem_cache-behaviour.patch
