x86/microcode: Consolidate the loader enablement checking (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8640,6 +8640,7 @@
 	patches.suse/Input-xpad-fix-Share-button-on-Xbox-One-controllers.patch
 	patches.suse/Input-xpad-add-support-for-several-more-controllers.patch
 	patches.suse/Input-xpad-fix-xpad_device-sorting.patch
+	patches.suse/x86-microcode-Consolidate-the-loader-enablement-checking.patch
 	patches.suse/KVM-arm64-Fix-uninitialized-memcache-pointer-in-user.patch
 	patches.suse/KVM-arm64-Fix-memory-check-in-host_stage2_set_owner_.patch
 	patches.suse/KVM-SVM-Forcibly-leave-SMM-mode-on-SHUTDOWN-intercep.patch
