blacklist.conf: backfill WONTFIX or unapplicable CVEs

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -424,3 +424,14 @@ cbeaa41dfe26b72639141e87183cb23e00d4b0dd # rust
 8d2da07c813ad333c20eb803e15f8c4541f25350 # not a real fix, but breaking kABI
 a85b8544d46390469b6ca72d6bfd3ecb7be985ff # ieee80211: cosmetic change, causing kABI breakage
 6a07e3af4973402fa199a80036c10060b922c92c # CVE-2025-38331 bsc#1246345: WONTFIX, unsupported
+39dfc971e42d886e7df01371cd1bef505076d84c # CVE-2025-38320 https://bugzilla.suse.com/show_bug.cgi?id=1246445#c1
+c134deabf4784e155d360744d4a6a835b9de4dd4 # CVE-2025-22072 https://bugzilla.suse.com/show_bug.cgi?id=1241406#c1
+3880cdbed1c4607e378f58fa924c5d6df900d1d3 # CVE-2025-38285 https://bugzilla.suse.com/show_bug.cgi?id=1246239#c1
+42ea22e754ba4f2b86f8760ca27f6f71da2d982c # CVE-2025-37940 https://bugzilla.suse.com/show_bug.cgi?id=1243526#c1
+bb5eb8a5b222fa5092f60d5555867a05ebc3bdf2 # CVE-2025-38333 https://bugzilla.suse.com/show_bug.cgi?id=1246371#c1
+a406aff8c05115119127c962cbbbbd202e1973ef # CVE-2025-22079 https://bugzilla.suse.com/show_bug.cgi?id=1241623#c2
+4fbd66d8254cedfd1218393f39d83b6c07a01917 # CVE-2024-56785 https://bugzilla.suse.com/show_bug.cgi?id=1235642#c1
+689805dcc474c2accb5cffbbcea1c06ee4a54570 # CVE-2025-38039 https://bugzilla.suse.com/show_bug.cgi?id=1244850#c1
+eb963d7948ce6571939c6875424b557b25f16610 # CVE-2025-38041 https://bugzilla.suse.com/show_bug.cgi?id=1245079#c1
+3bf179e36da917c5d9bec71c714573ed1649b7c1 # CVE-2025-38269 https://bugzilla.suse.com/show_bug.cgi?id=1246254#c1
+11ba7ce076e5903e7bdc1fd1498979c331b3c286 # CVE-2025-37807 https://bugzilla.suse.com/show_bug.cgi?id=1242921#c5
