--- a/series.conf
+++ b/series.conf
@@ -33150,6 +33150,7 @@
 	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
 	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
+	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
