HID: core: do not bypass hid_hw_raw_request (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33096,6 +33096,7 @@
 	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
 	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
+	patches.suse/HID-core-do-not-bypass-hid_hw_raw_request.patch
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregat.patch
