regulator: pwm-regulator: Calculate the output voltage for disabled PWMs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21297,6 +21297,7 @@
 	patches.suse/lsm-fix-the-logic-in-security_inode_getsecctx.patch
 	patches.suse/crypto-qat-fix-arbiter-mapping-generation-algorithm-.patch
 	patches.suse/regulator-pwm-regulator-Add-validity-checks-in-conti.patch
+	patches.suse/regulator-pwm-regulator-Calculate-the-output-voltage.patch
 	patches.suse/regulator-ti-abb-don-t-use-devm_platform_ioremap_res.patch
 	patches.suse/spi-sh-msiof-avoid-integer-overflow-in-constants.patch
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
