ALSA: hda/realtek: Add quirk for ASUS ROG Strix G712LWS (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33119,6 +33119,7 @@
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-G712LW.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
