--- a/series.conf
+++ b/series.conf
@@ -33144,6 +33144,7 @@
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
 	patches.suse/USB-serial-option-add-Foxconn-T99W640.patch
 	patches.suse/USB-serial-ftdi_sio-add-support-for-NDI-EMGUIDE-GEMI.patch
+	patches.suse/USB-serial-option-add-Telit-Cinterion-FE910C04-ECM-c.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
