--- a/series.conf
+++ b/series.conf
@@ -33127,6 +33127,7 @@
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
 	patches.suse/iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_8X_CHAN.patch
+	patches.suse/iio-adc-max1363-Reorder-mode_list-entries.patch
 	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
 	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
 	patches.suse/comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-is-too-.patch
