--- a/series.conf
+++ b/series.conf
@@ -33094,6 +33094,7 @@
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
+	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
