nilfs2: reject invalid file types when reading inodes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33141,6 +33141,7 @@
 	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
 	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
+	patches.suse/nilfs2-reject-invalid-file-types-when-reading-inodes.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
