--- a/series.conf
+++ b/series.conf
@@ -54150,6 +54150,7 @@
 	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
 	patches.suse/Revert-drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
+	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
