--- a/series.conf
+++ b/series.conf
@@ -54116,6 +54116,7 @@
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
 	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-amd-display-Free-memory-allocation.patch
+	patches.suse/drm-amd-display-Disable-CRTC-degamma-LUT-for-DCN401.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
