--- a/series.conf
+++ b/series.conf
@@ -10236,6 +10236,7 @@
 	patches.suse/USB-serial-option-add-Foxconn-T99W640.patch
 	patches.suse/usb-dwc2-gadget-Fix-enter-to-hibernation-for-UTMI-PH.patch
 	patches.suse/USB-serial-ftdi_sio-add-support-for-NDI-EMGUIDE-GEMI.patch
+	patches.suse/USB-serial-option-add-Telit-Cinterion-FE910C04-ECM-c.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/msft-hv-3286-Drivers-hv-Select-CONFIG_SYSFB-only-if-EFI-is-enable.patch
 	patches.suse/msft-hv-3287-tools-hv-fcopy-Fix-incorrect-file-path-conversion.patch
