ASoC: mediatek: mt8365-dai-i2s: pass correct size to mt8365_dai_set_priv (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10270,6 +10270,7 @@
 	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
 	patches.suse/can-netlink-can_changelink-fix-NULL-pointer-deref-of.patch
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
+	patches.suse/ASoC-mediatek-mt8365-dai-i2s-pass-correct-size-to-mt.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
