--- a/series.conf
+++ b/series.conf
@@ -10193,6 +10193,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-G712LW.patch
 	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-amd-display-Free-memory-allocation.patch
+	patches.suse/drm-amd-display-Disable-CRTC-degamma-LUT-for-DCN401.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
