drm/xe/pf: Move VFs reprovisioning to worker (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7411,6 +7411,7 @@
 	patches.suse/drm-xe-sa-Always-call-drm_suballoc_manager_fini.patch
 	patches.suse/drm-xe-Do-not-attempt-to-bootstrap-VF-in-execlists-m.patch
 	patches.suse/drm-xe-Move-suballocator-init-to-after-display-init.patch
+	patches.suse/drm-xe-pf-Move-VFs-reprovisioning-to-worker.patch
 	patches.suse/drm-xe-pf-Reset-GuC-VF-config-when-unprovisioning-cr.patch
 	patches.suse/drm-xe-relay-Don-t-use-GFP_KERNEL-for-new-transactio.patch
 	patches.suse/drm-xe-vf-Don-t-try-to-trigger-a-full-GT-reset-if-VF.patch
