USB: serial: option: add Foxconn T99W640 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10233,6 +10233,7 @@
 	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
+	patches.suse/USB-serial-option-add-Foxconn-T99W640.patch
 	patches.suse/usb-dwc2-gadget-Fix-enter-to-hibernation-for-UTMI-PH.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/msft-hv-3286-Drivers-hv-Select-CONFIG_SYSFB-only-if-EFI-is-enable.patch
