--- a/series.conf
+++ b/series.conf
@@ -10253,6 +10253,7 @@
 	patches.suse/msft-hv-3298-x86-hyperv-Expose-hv_map_msi_interrupt.patch
 	patches.suse/msft-hv-3299-PCI-hv-Use-the-correct-hypercall-for-unmasking-inter.patch
 	patches.suse/msft-hv-3300-tools-hv-fcopy-Fix-irregularities-with-size-of-ring-.patch
+	patches.suse/i2c-omap-Handle-omap_i2c_init-errors-in-omap_i2c_pro.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Remove-newline-char-from.patch
