--- a/series.conf
+++ b/series.conf
@@ -10269,6 +10269,7 @@
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
 	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
 	patches.suse/can-netlink-can_changelink-fix-NULL-pointer-deref-of.patch
+	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
