--- a/series.conf
+++ b/series.conf
@@ -10192,6 +10192,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-16-r0xxx.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-G712LW.patch
 	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
+	patches.suse/drm-amd-display-Free-memory-allocation.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
