i2c: omap: Add support for setting mux (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7841,6 +7841,7 @@
 	patches.suse/dmaengine-fsl-edma-free-irq-correctly-in-remove-path.patch
 	patches.suse/i2c-pxa-fix-call-balance-of-i2c-clk-handling-routine.patch
 	patches.suse/i2c-qup-Vote-for-interconnect-bandwidth-to-DRAM.patch
+	patches.suse/i2c-omap-Add-support-for-setting-mux.patch
 	patches.suse/watchdog-aspeed-Update-bootstatus-handling.patch
 	patches.suse/watchdog-aspeed-fix-64-bit-division.patch
 	patches.suse/i3c-master-svc-Flush-FIFO-before-sending-Dynamic-Add.patch
