--- a/series.conf
+++ b/series.conf
@@ -10189,6 +10189,7 @@
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
+	patches.suse/ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-16-r0xxx.patch
 	patches.suse/drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
