--- a/series.conf
+++ b/series.conf
@@ -10271,6 +10271,7 @@
 	patches.suse/can-netlink-can_changelink-fix-NULL-pointer-deref-of.patch
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
 	patches.suse/ASoC-mediatek-mt8365-dai-i2s-pass-correct-size-to-mt.patch
+	patches.suse/resource-fix-false-warning-in-__request_region.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
