iio: adc: max1363: Fix MAX1363_4X_CHANS/MAX1363_8X_CHANS[] (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10211,6 +10211,7 @@
 	patches.suse/spi-Add-check-for-8-bit-transfer-with-8-IO-mode-supp.patch
 	patches.suse/iio-backend-fix-out-of-bound-write.patch
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
+	patches.suse/iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_8X_CHAN.patch
 	patches.suse/iio-adc-axp20x_adc-Add-missing-sentinel-to-AXP717-AD.patch
 	patches.suse/iio-accel-fxls8962af-Fix-use-after-free-in-fxls8962a.patch
 	patches.suse/iio-adc-ad7949-use-spi_is_bpw_supported.patch
