--- a/series.conf
+++ b/series.conf
@@ -9993,6 +9993,7 @@
 	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
+	patches.suse/i2c-omap-Fix-an-error-handling-path-in-omap_i2c_prob.patch
 	patches.suse/perf-aux-Fix-pending-disable-flow-when-the-AUX-ring-buffer.patch
 	patches.suse/vt-add-missing-notification-when-switching-back-to-t.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
