HID: core: ensure the allocated report buffer can contain the reserved report ID (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10157,6 +10157,7 @@
 	patches.suse/clk-scmi-Handle-case-where-child-clocks-are-initiali.patch
 	patches.suse/clk-imx-Fix-an-out-of-bounds-access-in-dispmix_csr_c.patch
 	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
+	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
