can: netlink: can_changelink(): fix NULL pointer deref of struct can_priv::do_set_mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10268,6 +10268,7 @@
 	patches.suse/Revert-drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
 	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
+	patches.suse/can-netlink-can_changelink-fix-NULL-pointer-deref-of.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
