i2c: omap: fix deprecated of_property_read_bool() use (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8610,6 +8610,7 @@
 	patches.suse/xen-swiotlb-Use-swiotlb-bouncing-if-kmalloc-allocati.patch
 	patches.suse/xenbus-Allow-PVH-dom0-a-non-local-xenstore.patch
 	patches.suse/xenbus-Use-kref-to-track-req-lifetime.patch
+	patches.suse/i2c-omap-fix-deprecated-of_property_read_bool-use.patch
 	patches.suse/iio-accel-adxl367-fix-setting-odr-for-activity-time-.patch
 	patches.suse/iio-imu-st_lsm6dsx-fix-possible-lockup-in-st_lsm6dsx.patch
 	patches.suse/iio-imu-st_lsm6dsx-fix-possible-lockup-in-st_lsm6dsx-8114ef8.patch
