--- a/series.conf
+++ b/series.conf
@@ -10267,6 +10267,7 @@
 	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
 	patches.suse/Revert-drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
+	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
