--- a/series.conf
+++ b/series.conf
@@ -10199,6 +10199,7 @@
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
 	patches.suse/drm-xe-mocs-Initialize-MOCS-index-early.patch
+	patches.suse/drm-xe-pf-Prepare-to-stop-SR-IOV-support-prior-GT-re.patch
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/KVM-TDX-Don-t-report-base-TDVMCALLs.patch
 	patches.suse/Documentation-KVM-Fix-unexpected-unindent-warning.patch
