blacklist.conf: backfill WONTFIX and unapplicable CVEs

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -435,3 +435,39 @@ a406aff8c05115119127c962cbbbbd202e1973ef # CVE-2025-22079 https://bugzilla.suse.
 eb963d7948ce6571939c6875424b557b25f16610 # CVE-2025-38041 https://bugzilla.suse.com/show_bug.cgi?id=1245079#c1
 3bf179e36da917c5d9bec71c714573ed1649b7c1 # CVE-2025-38269 https://bugzilla.suse.com/show_bug.cgi?id=1246254#c1
 11ba7ce076e5903e7bdc1fd1498979c331b3c286 # CVE-2025-37807 https://bugzilla.suse.com/show_bug.cgi?id=1242921#c5
+1acd73edbbfef2c3c5b43cba4006a7797eca7050 # CVE-2024-53220 https://bugzilla.suse.com/show_bug.cgi?id=1234975#c1
+f10a890308a7cd8794e21f646f09827c6cb4bf5d # CVE-2024-56744 https://bugzilla.suse.com/show_bug.cgi?id=1234933#c1
+2afd4d267e6dbaec8d3ccd4f5396cb84bc67aa2e # CVE-2024-52560 https://bugzilla.suse.com/show_bug.cgi?id=1238991#c1
+3aa660c059240e0c795217182cf7df32909dd917 # CVE-2025-21955 https://bugzilla.suse.com/show_bug.cgi?id=1240737#c1
+c8b5b7c5da7d0c31c9b7190b4a7bba5281fc4780 # CVE-2025-22037 https://bugzilla.suse.com/show_bug.cgi?id=1241427#c1
+21a4e47578d44c6b37c4fc4aba8ed7cc8dbb13de # CVE-2025-37777 https://bugzilla.suse.com/show_bug.cgi?id=1242772#c1
+c426497fa2055c8005196922e7d29c41d7e0948a # CVE-2025-38199 https://bugzilla.suse.com/show_bug.cgi?id=1245962#c1
+bb39ed47065455604729404729d9116868638d31 # CVE-2025-21967 https://bugzilla.suse.com/show_bug.cgi?id=1240782#c1
+071d8e4c2a3b0999a9b822e2eb8854784a350f8a # CVE-2025-38282 https://bugzilla.suse.com/show_bug.cgi?id=1246275#c1
+f914b52c379c12288b7623bb814d0508dbe7481d # CVE-2025-38346 https://bugzilla.suse.com/show_bug.cgi?id=1246261#c2
+9ad0452c0277b816a435433cca601304cfac7c21 # CVE-2025-38086 https://bugzilla.suse.com/show_bug.cgi?id=1245503#c1
+18b4fac5ef17f77fed9417d22210ceafd6525fc7 # CVE-2025-37776 https://bugzilla.suse.com/show_bug.cgi?id=1242804#c1
+6dbb0d97c5096072c78a6abffe393584e57ae945 # CVE-2025-38324 https://bugzilla.suse.com/show_bug.cgi?id=1246474#c1
+eb85c2410d6f581e957cd03a644ff6ddbe592af9 # CVE-2025-23132 https://bugzilla.suse.com/show_bug.cgi?id=1241608#c1
+547e836661554dcfa15c212a3821664e85b4191a # CVE-2025-38260 https://bugzilla.suse.com/show_bug.cgi?id=1246223#c1
+1c82587cb57687de3f18ab4b98a8850c789bedcf # CVE-2024-56548 https://bugzilla.suse.com/show_bug.cgi?id=1235073#c91
+9e9e085effe9b7e342138fde3cf8577d22509932 # CVE-2024-56559 https://bugzilla.suse.com/show_bug.cgi?id=1235101#c2
+cf89c9434af122f28a3552e6f9cc5158c33ce50a # CVE-2024-56781 https://bugzilla.suse.com/show_bug.cgi?id=1235655#c1
+8cca35cb29f81eba3e96ec44dad8696c8a2f9138 # CVE-2024-48875 https://bugzilla.suse.com/show_bug.cgi?id=1235725#c2
+6aacd1484468361d1d04badfe75f264fa5314864 # CVE-2024-57843 https://bugzilla.suse.com/show_bug.cgi?id=1235816#c2
+9360dfe4cbd62ff1eb8217b815964931523b75b3 # CVE-2025-21965 https://bugzilla.suse.com/show_bug.cgi?id=1240777#c2
+428dc9fc0873989d73918d4a9cc22745b7bbc799 # CVE-2025-38012 https://bugzilla.suse.com/show_bug.cgi?id=1244730#c2
+f505e6c91e7a22d10316665a86d79f84d9f0ba76 # CVE-2025-21665 https://bugzilla.suse.com/show_bug.cgi?id=1236684#c2
+5595c31c370957aabe739ac3996aedba8267603f # CVE-2025-38033 https://bugzilla.suse.com/show_bug.cgi?id=1244785#c1
+208baa3ec9043a664d9acfb8174b332e6b17fb69 # CVE-2025-37841 https://bugzilla.suse.com/show_bug.cgi?id=1242974#c1
+6268d5bc10354fc2ab8d44a0cd3b042d49a0417e # CVE-2025-21657 https://bugzilla.suse.com/show_bug.cgi?id=1236246#c1
+a121798ae669351ec0697c94f71c3a692b2a755b # CVE-2025-38049 https://bugzilla.suse.com/show_bug.cgi?id=1241645#c1
+40cb48eba3b4b79e110c1a35d33a48cac54507a2 # CVE-2025-37876 https://bugzilla.suse.com/show_bug.cgi?id=1243057#c1
+986c50f6bca109c6cf362b4e2babcb85aba958f6 # CVE-2025-22123 https://bugzilla.suse.com/show_bug.cgi?id=1241517#c1
+1b0449544c6482179ac84530b61fc192a6527bfd # CVE-2025-37834 https://bugzilla.suse.com/show_bug.cgi?id=1242925#c1
+8fef0a3b17bb258130a4fcbcb5addf94b25e9ec5 # CVE-2025-21897 https://bugzilla.suse.com/show_bug.cgi?id=1240597#c2
+fd881d0a085fc54354414aed990ccf05f282ba53 # CVE-2025-38067 https://bugzilla.suse.com/show_bug.cgi?id=1245213#c2
+3db42c75a921854a99db0a2775814fef97415bac # CVE-2025-37883 https://bugzilla.suse.com/show_bug.cgi?id=1243050#c1
+a70cf04b08f44f41bce14659aa7012674b15d9de # CVE-2025-38284 https://bugzilla.suse.com/show_bug.cgi?id=1246271#c1
+cbc5dde0a461240046e8a41c43d7c3b76d5db952 # CVE-2025-21694 https://bugzilla.suse.com/show_bug.cgi?id=1237109#c1
+8fd56ad6e7c90ac2bddb0741c6b248c8c5d56ac8 # CVE-2025-21646 https://bugzilla.suse.com/show_bug.cgi?id=1236168#c1
