--- a/supported.conf
+++ b/supported.conf
@@ -628,6 +628,7 @@
 -!optional	drivers/counter/interrupt-cnt					# armv7hl
 -!optional	drivers/counter/microchip-tcb-capture				# armv7hl
 -!optional	drivers/counter/ti-eqep
+-!optional	drivers/counter/ti-ecap-capture		# armv7hl only
 		drivers/cpufreq/acpi-cpufreq					# x86 cpufreq driver used by all, if no specific one like intel_pstate
 		drivers/cpufreq/amd_freq_sensitivity				# AMD frequency sensitivity feedback to the ondemand governor
 -!optional	drivers/cpufreq/apple-soc-cpufreq	# SP6-NEED-REVIEW
@@ -663,6 +664,8 @@
 -		drivers/crypto/allwinner/sun8i-ce/sun8i-ce
 -		drivers/crypto/allwinner/sun8i-ss/sun8i-ss
 -		drivers/crypto/amlogic/amlogic-gxl-crypto
+-!optional	drivers/crypto/aspeed/aspeed-acry	# armv7hl only
+-!optional	drivers/crypto/aspeed/aspeed_crypto	# armv7hl only
 -		drivers/crypto/atmel-ecc
 -		drivers/crypto/atmel-i2c
 -		drivers/crypto/atmel-sha204a
@@ -720,6 +723,8 @@
 -		drivers/crypto/s5p-sss
 		drivers/crypto/sa2ul						# jsc#PED-1379
 -!optional	drivers/crypto/sahara
+-!optional	drivers/crypto/stm32/stm32-cryp		# armv7hl only
+-!optional	drivers/crypto/stm32/stm32-hash		# armv7hl only
 -		drivers/crypto/ux500/cryp/ux500_cryp				# armv7hl
 -		drivers/crypto/ux500/hash/ux500_hash				# armv7hl
 		drivers/crypto/virtio/virtio_crypto
@@ -969,6 +974,7 @@
 		drivers/gpio/gpio-dwapb
 -		drivers/gpio/gpio-eic-sprd
 -		drivers/gpio/gpio-elkhartlake		# SP6-NEED-REVIEW
+-!optional	drivers/gpio/gpio-en7523		# armv7hl only
 -		drivers/gpio/gpio-exar
 -		drivers/gpio/gpio-f7188x
 -		drivers/gpio/gpio-fxl6408		# SP6-NEED-REVIEW
@@ -1137,7 +1143,10 @@
 -!optional	drivers/gpu/drm/solomon/ssd130x-i2c	# SP6-NEED-REVIEW
 -!optional	drivers/gpu/drm/solomon/ssd130x-spi	# SP6-NEED-REVIEW
 -!optional	drivers/gpu/drm/sprd/sprd-drm		# SP6-NEED-REVIEW
+-!optional	drivers/gpu/drm/sun4i/sun4i-backend	# armv7hl only
 -!optional	drivers/gpu/drm/sun4i/sun4i-drm		# SP6-NEED-REVIEW
+-!optional	drivers/gpu/drm/sun4i/sun4i-drm-hdmi	# armv7hl only
+-!optional	drivers/gpu/drm/sun4i/sun4i-frontend	# armv7hl only
 -!optional	drivers/gpu/drm/sun4i/sun4i-tcon	# SP6-NEED-REVIEW
 -!optional	drivers/gpu/drm/sun4i/sun4i_tv		# SP6-NEED-REVIEW
 -!optional	drivers/gpu/drm/sun4i/sun6i_drc		# SP6-NEED-REVIEW
@@ -1420,6 +1429,7 @@
 -		drivers/i2c/busses/i2c-exynos5					# armv7hl
 -		drivers/i2c/busses/i2c-fsi
 		drivers/i2c/busses/i2c-gpio					# Raspberry Pi 7" touchscreen
+-!optional	drivers/i2c/busses/i2c-gxp	# armv7hl only
 -		drivers/i2c/busses/i2c-hisi
 -		drivers/i2c/busses/i2c-hix5hd2
 		drivers/i2c/busses/i2c-i801					# Intel 82801 SMBus driver
@@ -1495,6 +1505,7 @@
 		drivers/i2c/muxes/i2c-mux-pinctrl
 		drivers/i2c/muxes/i2c-mux-reg
 -		drivers/i3c/i3c
+-!optional	drivers/i3c/master/ast2600-i3c-master	# armv7hl only
 -		drivers/i3c/master/dw-i3c-master
 -		drivers/i3c/master/i3c-master-cdns
 -!optional	drivers/i3c/master/mipi-i3c-hci/mipi-i3c-hci
@@ -2791,6 +2802,7 @@
 		drivers/misc/eeprom/max6875					# MAX6874/MAX6875
 		drivers/misc/enclosure						# fate#303913
 -		drivers/misc/fastrpc
+-!optional	drivers/misc/gehc-achc			# armv7hl only
 +external	drivers/misc/genwqe/genwqe_card					# IBM
 -		drivers/misc/hi6421v600-irq		# SP6-NEED-REVIEW
 -		drivers/misc/hisi_hikey_usb
@@ -3076,9 +3088,11 @@
 		drivers/net/ethernet/chelsio/inline_crypto/ch_ipsec/ch_ipsec
 		drivers/net/ethernet/chelsio/inline_crypto/ch_ktls/ch_ktls
 		drivers/net/ethernet/chelsio/libcxgb/libcxgb
+-!optional	drivers/net/ethernet/cirrus/cs89x0	# armv7hl only
 		drivers/net/ethernet/cisco/enic/enic
 -		drivers/net/ethernet/cortina/gemini
 		drivers/net/ethernet/davicom/dm9000				# armv7hl
+-!optional	drivers/net/ethernet/davicom/dm9051	# armv7hl only
 -!optional	drivers/net/ethernet/dec/tulip/de2104x
 -!optional	drivers/net/ethernet/dec/tulip/de4x5
 -!optional	drivers/net/ethernet/dec/tulip/dmfe
@@ -3228,6 +3242,7 @@
 		drivers/net/ethernet/sun/niu
 		drivers/net/ethernet/sun/sungem					# Sun GEM Gbit ethernet driver, used in PowerMacs
 -!optional	drivers/net/ethernet/sun/sunhme
+-!optional	drivers/net/ethernet/sunplus/sp7021_emac	# armv7hl only
 		drivers/net/ethernet/synopsys/dwc-xlgmac
 		drivers/net/ethernet/tehuti/tehuti
 		drivers/net/ethernet/ti/am65-cpts				# jsc#PED-1379
@@ -3680,6 +3695,7 @@
 -!optional	drivers/nvmem/nvmem_qcom-spmi-sdam
 		drivers/nvmem/nvmem_qfprom
 -		drivers/nvmem/nvmem_rockchip_efuse
+-!optional	drivers/nvmem/nvmem_sunplus_ocotp	# armv7hl only
 -		drivers/nvmem/nvmem_snvs_lpgpr
 -		drivers/nvmem/nvmem_sunxi_sid
 -		drivers/nvmem/nvmem_u-boot-env		# SP6-NEED-REVIEW
@@ -3687,6 +3703,7 @@
 		drivers/parport/parport_ax88796
 		drivers/parport/parport_pc					# PC-style parallel port driver
 		drivers/parport/parport_serial					# Driver for common parallel+serial multi-I/O PCI cards
+-!optional	drivers/pci/controller/dwc/pci-dra7xx	# armv7hl only
 -		drivers/pci/controller/dwc/pci-exynos
 -		drivers/pci/controller/dwc/pcie-qcom-ep		# SP6-NEED-REVIEW
 		drivers/pci/controller/dwc/pcie-tegra194
@@ -3743,6 +3760,7 @@
 -		drivers/phy/amlogic/phy-meson-g12a-usb3-pcie
 -		drivers/phy/amlogic/phy-meson-gxl-usb2
 -		drivers/phy/amlogic/phy-meson-gxl-usb3
+-!optional	drivers/phy/amlogic/phy-meson8-hdmi-tx		# armv7hl only
 -		drivers/phy/amlogic/phy-meson8b-usb2
 -		drivers/phy/broadcom/phy-bcm-kona-usb2
 -		drivers/phy/broadcom/phy-bcm-ns-usb2
@@ -3846,6 +3864,7 @@
 -		drivers/phy/samsung/phy-samsung-ufs
 		drivers/phy/st/phy-miphy28lp					# armv7hl
 		drivers/phy/st/phy-stih407-usb					# armv7hl
+-!optional	drivers/phy/sunplus/phy-sunplus-usb2	# armv7hl only
 		drivers/phy/tegra/phy-tegra-xusb
 		drivers/phy/tegra/phy-tegra194-p2u
 		drivers/phy/ti/phy-am654-serdes					# jsc#PED-1379
@@ -4146,6 +4165,8 @@
 -		drivers/regulator/mt6311-regulator
 -!optional	drivers/regulator/mt6315-regulator
 -		drivers/regulator/mt6323-regulator				# armv7hl
+-!optional	drivers/regulator/mt6331-regulator	# armv7hl only
+-!optional	drivers/regulator/mt6332-regulator	# armv7hl only
 -!optional	drivers/regulator/mt6358-regulator				# armv7hl
 -!optional	drivers/regulator/mt6359-regulator				# armv7hl
 -		drivers/regulator/mt6360-regulator
@@ -4229,6 +4250,7 @@
 -		drivers/remoteproc/imx_dsp_rproc		# SP6-NEED-REVIEW
 -		drivers/remoteproc/imx_rproc
 -		drivers/remoteproc/keystone_remoteproc				# armv7hl
+-!optional	drivers/remoteproc/meson_mx_ao_arc	# armv7hl only
 -		drivers/remoteproc/mtk_scp
 -		drivers/remoteproc/mtk_scp_ipi
 -		drivers/remoteproc/omap_remoteproc				# armv7hl
@@ -4257,6 +4279,7 @@
 -		drivers/reset/reset-scmi
 		drivers/reset/reset-ti-sci					# jsc#PED-1379
 		drivers/reset/reset-ti-syscon					# jsc#PED-1379
+-!optional	drivers/reset/reset-tps380x	# armv7hl only
 -		drivers/rpmsg/mtk_rpmsg
 		drivers/rpmsg/qcom_glink
 		drivers/rpmsg/qcom_glink_native
@@ -4303,6 +4326,7 @@
 -!optional	drivers/rtc/rtc-max8907
 -		drivers/rtc/rtc-meson						# armv7hl
 -		drivers/rtc/rtc-meson-vrtc
+-!optional	drivers/rtc/rtc-msc313		# armv7hl only
 -		drivers/rtc/rtc-mt7622
 		drivers/rtc/rtc-mv
 -!optional	drivers/rtc/rtc-mxc
@@ -4334,6 +4358,7 @@
 -		drivers/rtc/rtc-sd3078
 -		drivers/rtc/rtc-sh		# SP6-NEED-REVIEW
 		drivers/rtc/rtc-snvs						# jsc#PED-4758
+-!optional	drivers/rtc/rtc-sunplus		# armv7hl only
 		drivers/rtc/rtc-tegra
 -		drivers/rtc/rtc-ti-k3		# SP6-NEED-REVIEW
 -		drivers/rtc/rtc-wilco-ec
@@ -4503,6 +4528,7 @@
 -!optional	drivers/soc/aspeed/aspeed-lpc-ctrl				# armv7hl
 -!optional	drivers/soc/aspeed/aspeed-lpc-snoop				# armv7hl
 -!optional	drivers/soc/aspeed/aspeed-p2a-ctrl				# armv7hl
+-!optional	drivers/soc/aspeed/aspeed-uart-routing	# armv7hl only
 -		drivers/soc/fsl/dpaa2-console
 		drivers/soc/fsl/dpio/fsl-mc-dpio
 -!optional	drivers/soc/imx/imx93-pd		# SP6-NEED-REVIEW
@@ -4536,6 +4562,7 @@
 -!optional	drivers/spi/spi-amlogic-spifc-a1	# SP6-NEED-REVIEW
 		drivers/spi/spi-amd
 -		drivers/spi/spi-armada-3700
+-!optional	drivers/spi/spi-aspeed-smc		# armv7hl only
 -		drivers/spi/spi-axi-spi-engine					# armv7hl
 -		drivers/spi/spi-bcm-qspi
 		drivers/spi/spi-bcm2835
@@ -4559,6 +4586,7 @@
 		drivers/spi/spi-fsl-qspi
 -		drivers/spi/spi-geni-qcom
 -!optional	drivers/spi/spi-gpio
+-!optional	drivers/spi/spi-gxp			# armv7hl only
 -		drivers/spi/spi-hisi-kunpeng
 		drivers/spi/spi-hisi-sfc-v3xx
 		drivers/spi/spi-imx
@@ -4603,6 +4631,7 @@
 -		drivers/spi/spi-sprd
 -		drivers/spi/spi-sprd-adi
 -		drivers/spi/spi-st-ssc4						# armv7hl
+-!optional	drivers/spi/spi-sunplus-sp7021		# armv7hl only
 -		drivers/spi/spi-sun4i
 -		drivers/spi/spi-sun6i
 		drivers/spi/spi-synquacer
@@ -4819,6 +4848,7 @@
 -		drivers/thermal/sun8i_thermal
 		drivers/thermal/tegra/tegra-bpmp-thermal
 		drivers/thermal/tegra/tegra-soctherm
+-!optional	drivers/thermal/tegra/tegra30-tsensor		# armv7hl only
 -!optional	drivers/thermal/thermal-generic-adc
 -		drivers/thermal/thermal_mmio
 -		drivers/thermal/ti-soc-thermal/ti-soc-thermal			# armv7hl
@@ -4951,6 +4981,7 @@
 -!optional	drivers/usb/gadget/legacy/raw_gadget
 -!optional	drivers/usb/gadget/legacy/tcm_usb_gadget
 		drivers/usb/gadget/libcomposite
+-!optional	drivers/usb/gadget/udc/aspeed_udc	# armv7hl only
 -!optional	drivers/usb/gadget/udc/aspeed-vhub/aspeed-vhub			# armv7hl
 -!optional	drivers/usb/gadget/udc/bdc/bdc
 -!optional	drivers/usb/gadget/udc/bdc/bdc_pci
@@ -5345,6 +5376,7 @@
 -		drivers/watchdog/da9062_wdt
 -!optional	drivers/watchdog/da9063_wdt					# armv7hl
 -		drivers/watchdog/davinci_wdt					# armv7hl
+-!optional	drivers/watchdog/db8500_wdt		# armv7hl only
 		drivers/watchdog/diag288_wdt					# IBM s390 Watchdog driver
 		drivers/watchdog/dw_wdt
 -		drivers/watchdog/ebc-c384_wdt
@@ -5353,6 +5385,7 @@
 		drivers/watchdog/f71808e_wdt					# Fintek F71xxx watchdog driver
 -		drivers/watchdog/ftwdt010_wdt					# armv7hl
 -		drivers/watchdog/gpio_wdt
+-!optional	drivers/watchdog/gxp-wdt		# armv7hl only
 		drivers/watchdog/hpwdt
 +base		drivers/watchdog/i6300esb					# Watchdog timer driver for Intel 6300ESB chipset
 		drivers/watchdog/iTCO_vendor_support
@@ -5412,6 +5445,7 @@
 -		drivers/watchdog/sprd_wdt
 -		drivers/watchdog/st_lpc_wdt					# armv7hl
 -		drivers/watchdog/stpmic1_wdt
+-!optional	drivers/watchdog/sunplus_wdt		# armv7hl only
 -		drivers/watchdog/sunxi_wdt
 -		drivers/watchdog/tegra_wdt
 -		drivers/watchdog/tqmx86_wdt
