devlink: define enum for attr types of dynamic attributes (jsc#PED-12745).

--- a/series.conf
+++ b/series.conf
@@ -53487,6 +53487,7 @@
 	patches.suse/usbnet-asix-AX88772-leave-the-carrier-control-to-phy.patch
 	patches.suse/i40e-fix-MMIO-write-access-to-an-invalid-page-in-i40.patch
 	patches.suse/netfilter-nft_set_pipapo-prevent-overflow-in-lookup-.patch
+	patches.suse/devlink-define-enum-for-attr-types-of-dynamic-attrib.patch
 	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
 	patches.suse/wifi-mac80211-Add-link-iteration-macro-for-link-data.patch
 	patches.suse/wifi-mac80211-Create-separate-links-for-VLAN-interfa.patch
