--- a/series.conf
+++ b/series.conf
@@ -54181,6 +54181,7 @@
 	patches.suse/devlink-Add-support-for-u64-parameters.patch
 	patches.suse/dpll-Add-basic-Microchip-ZL3073x-support.patch
 	patches.suse/dpll-zl3073x-Fetch-invariants-during-probe.patch
+	patches.suse/dpll-zl3073x-Read-DPLL-types-and-pin-properties-from.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
