dpll: zl3073x: Fetch invariants during probe (jsc#PED-12745).

--- a/series.conf
+++ b/series.conf
@@ -54180,6 +54180,7 @@
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
 	patches.suse/devlink-Add-support-for-u64-parameters.patch
 	patches.suse/dpll-Add-basic-Microchip-ZL3073x-support.patch
+	patches.suse/dpll-zl3073x-Fetch-invariants-during-probe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
