dpll: zl3073x: Add support to get/set priority on input pins (jsc#PED-12745).

--- a/series.conf
+++ b/series.conf
@@ -54184,6 +54184,7 @@
 	patches.suse/dpll-zl3073x-Read-DPLL-types-and-pin-properties-from.patch
 	patches.suse/dpll-zl3073x-Register-DPLL-devices-and-pins.patch
 	patches.suse/dpll-zl3073x-Implement-input-pin-selection-in-manual.patch
+	patches.suse/dpll-zl3073x-Add-support-to-get-set-priority-on-inpu.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
