--- a/series.conf
+++ b/series.conf
@@ -54185,6 +54185,7 @@
 	patches.suse/dpll-zl3073x-Register-DPLL-devices-and-pins.patch
 	patches.suse/dpll-zl3073x-Implement-input-pin-selection-in-manual.patch
 	patches.suse/dpll-zl3073x-Add-support-to-get-set-priority-on-inpu.patch
+	patches.suse/dpll-zl3073x-Implement-input-pin-state-setting-in-au.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
