dt-bindings: dpll: Add support for Microchip Azurite chip family (jsc#PED-12745).

--- a/series.conf
+++ b/series.conf
@@ -54177,6 +54177,7 @@
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
+	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
