dpll: zl3073x: Implement input pin selection in manual mode (jsc#PED-12745).

--- a/series.conf
+++ b/series.conf
@@ -54183,6 +54183,7 @@
 	patches.suse/dpll-zl3073x-Fetch-invariants-during-probe.patch
 	patches.suse/dpll-zl3073x-Read-DPLL-types-and-pin-properties-from.patch
 	patches.suse/dpll-zl3073x-Register-DPLL-devices-and-pins.patch
+	patches.suse/dpll-zl3073x-Implement-input-pin-selection-in-manual.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
