--- a/series.conf
+++ b/series.conf
@@ -54178,6 +54178,7 @@
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
+	patches.suse/devlink-Add-support-for-u64-parameters.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
