dt-bindings: dpll: Add DPLL device and pin (jsc#PED-12745).

--- a/series.conf
+++ b/series.conf
@@ -54175,6 +54175,9 @@
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 
+	# netdev/net-next main
+	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
+
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
