--- a/series.conf
+++ b/series.conf
@@ -53520,6 +53520,7 @@
 	patches.suse/wifi-ath12k-fix-node-corruption-in-ar-arvifs-list.patch
 	patches.suse/wifi-mac80211_hwsim-Prevent-tsf-from-setting-if-beac.patch
 	patches.suse/wifi-iwlwifi-pcie-make-sure-to-lock-rxq-read.patch
+	patches.suse/netlink-fix-policy-dump-for-int-with-validation-call.patch
 	patches.suse/Bluetooth-MGMT-iterate-over-mesh-commands-in-mgmt_me.patch
 	patches.suse/Bluetooth-btintel-Check-dsbr-size-from-EFI-variable.patch
 	patches.suse/wifi-mac80211-do-not-offer-a-mesh-path-if-forwarding.patch
