--- a/series.conf
+++ b/series.conf
@@ -54167,6 +54167,7 @@
 	patches.suse/nilfs2-reject-invalid-file-types-when-reading-inodes.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
 	patches.suse/drm-i915-display-Fix-dma_fence_wait_timeout-return-v.patch
+	patches.suse/drm-xe-Fix-build-without-debugfs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
