--- a/series.conf
+++ b/series.conf
@@ -10282,6 +10282,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
 	patches.suse/ASoC-mediatek-mt8365-dai-i2s-pass-correct-size-to-mt.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
+	patches.suse/drm-i915-display-Fix-dma_fence_wait_timeout-return-v.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
