RISC-V: Add defines for the SBI nested acceleration extension (jsc#PED-348).

--- a/series.conf
+++ b/series.conf
@@ -1708,6 +1708,7 @@
 	patches.suse/RISC-V-KVM-Break-down-the-__kvm_riscv_switch_to-into.patch
 	patches.suse/RISC-V-KVM-Replace-aia_set_hvictl-with-aia_hvictl_va.patch
 	patches.suse/RISC-V-KVM-Don-t-setup-SGEI-for-zero-guest-external-.patch
+	patches.suse/RISC-V-Add-defines-for-the-SBI-nested-acceleration-e.patch
 	patches.suse/RISC-V-KVM-Add-common-nested-acceleration-support.patch
 	patches.suse/RISC-V-KVM-Use-nacl_csr_xyz-for-accessing-H-extensio.patch
 	patches.suse/RISC-V-KVM-Use-nacl_csr_xyz-for-accessing-AIA-CSRs.patch
