--- a/series.conf
+++ b/series.conf
@@ -33156,6 +33156,7 @@
 	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
 	patches.suse/nilfs2-reject-invalid-file-types-when-reading-inodes.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
+	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
