i2c: virtio: Avoid hang by using interruptible completion wait (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33157,6 +33157,7 @@
 	patches.suse/nilfs2-reject-invalid-file-types-when-reading-inodes.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
+	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
