--- a/series.conf
+++ b/series.conf
@@ -10285,6 +10285,7 @@
 	patches.suse/drm-i915-display-Fix-dma_fence_wait_timeout-return-v.patch
 	patches.suse/drm-xe-Fix-build-without-debugfs.patch
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
+	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
