i2c: tegra: Fix reset error handling with ACPI (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10284,6 +10284,7 @@
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
 	patches.suse/drm-i915-display-Fix-dma_fence_wait_timeout-return-v.patch
 	patches.suse/drm-xe-Fix-build-without-debugfs.patch
+	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
