i2c: qup: jump out of the loop in case of timeout (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10286,6 +10286,7 @@
 	patches.suse/drm-xe-Fix-build-without-debugfs.patch
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
+	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
