rcu-tasks: Maintain lists to eliminate RCU-tasks/do_exit() (bsc#1246298)

--- a/series.conf
+++ b/series.conf
@@ -22310,6 +22310,7 @@
 	patches.suse/rcu-tasks-Add-data-to-eliminate-RCU-tasks-do_exit-de.patch
 	patches.suse/rcu-tasks-Initialize-callback-lists-at-rcu_init-time.patch
 	patches.suse/rcu-tasks-Initialize-data-to-eliminate-RCU-tasks-do_.patch
+	patches.suse/rcu-tasks-Maintain-lists-to-eliminate-RCU-tasks-do_e.patch
 	patches.suse/workqueue-Add-rcu-lock-check-at-the-end-of-work-item-execution.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-on-cou.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
