kabi: Hide adding of u64 to devlink_param_type (jsc#PED-12745).

--- a/series.conf
+++ b/series.conf
@@ -11257,6 +11257,7 @@
 	patches.kabi/kABI-restore-layout-of-struct-msi_desc.patch
 	patches.kabi/kABI-Fix-the-module-name-type-in-audit_context.patch
 	patches.kabi/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
+	patches.kabi/devlink_hide_adding_u64_to_devlink_param_types.patch
 
 	########################################################
 	# preempt-rt backport converged
