--- a/series.conf
+++ b/series.conf
@@ -54729,6 +54729,7 @@
 	patches.kabi/drm_framebuffer-kabi-workaround.patch
 	patches.kabi/bluetooth-hci_dev-kabi-workaround.patch
 	patches.kabi/hci_dev-centralize-extra-lock.patch
+	patches.kabi/devlink_hide_adding_u64_to_devlink_param_types.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
