--- a/series.conf
+++ b/series.conf
@@ -33030,6 +33030,7 @@
 	patches.suse/scsi-qla2xxx-Fix-DMA-mapping-test-in-qla24xx_get_port_data.patch
 	patches.suse/scsi-qla4xxx-Fix-missing-DMA-mapping-error-in-qla4xxx_allo.patch
 	patches.suse/scsi-core-Enforce-unlimited-max_segment_size-when-virt_bou.patch
+	patches.suse/btrfs-fix-missing-error-handling-when-searching-for-.patch
 	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
 	patches.suse/nvme-pci-refresh-visible-attrs-after-being-checked.patch
 	patches.suse/dma-buf-fix-timeout-handling-in-dma_resv_wait_timeou.patch
