btrfs: fix missing error handling when searching for inode refs during log replay (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10044,6 +10044,7 @@
 	patches.suse/scsi-qla4xxx-Fix-missing-DMA-mapping-error-in-qla4xxx_allo.patch
 	patches.suse/scsi-sd-Fix-VPD-page-0xb7-length-check.patch
 	patches.suse/scsi-core-Enforce-unlimited-max_segment_size-when-virt_bou.patch
+	patches.suse/btrfs-fix-missing-error-handling-when-searching-for-.patch
 	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
 	patches.suse/nvmet-fix-memory-leak-of-bio-integrity.patch
 	patches.suse/nvme-pci-refresh-visible-attrs-after-being-checked.patch
