--- a/series.conf
+++ b/series.conf
@@ -9956,6 +9956,7 @@
 	patches.suse/mm-userfaultfd-fix-race-of-userfaultfd_move-and-swap-cache.patch
 	patches.suse/maple_tree-fix-MA_STATE_PREALLOC-flag-in-mas_preallo.patch
 	patches.suse/btrfs-fix-a-race-between-renames-and-directory-loggi.patch
+	patches.suse/btrfs-fix-assertion-when-building-free-space-tree.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
 	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
