--- a/series.conf
+++ b/series.conf
@@ -10047,6 +10047,7 @@
 	patches.suse/scsi-core-Enforce-unlimited-max_segment_size-when-virt_bou.patch
 	patches.suse/btrfs-fix-missing-error-handling-when-searching-for-.patch
 	patches.suse/btrfs-fix-iteration-of-extrefs-during-log-replay.patch
+	patches.suse/btrfs-record-new-subvolume-in-parent-dir-earlier-to-.patch
 	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
 	patches.suse/nvmet-fix-memory-leak-of-bio-integrity.patch
 	patches.suse/nvme-pci-refresh-visible-attrs-after-being-checked.patch
