--- a/series.conf
+++ b/series.conf
@@ -54166,6 +54166,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
 	patches.suse/nilfs2-reject-invalid-file-types-when-reading-inodes.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
+	patches.suse/sprintf.h-requires-stdarg.h.patch
 	patches.suse/drm-i915-display-Fix-dma_fence_wait_timeout-return-v.patch
 	patches.suse/drm-xe-Fix-build-without-debugfs.patch
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
