sprintf.h: mask additional include (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54712,6 +54712,7 @@
 	patches.kabi/drm_framebuffer-kabi-workaround.patch
 	patches.kabi/bluetooth-hci_dev-kabi-workaround.patch
 	patches.kabi/hci_dev-centralize-extra-lock.patch
+	patches.kabi/sprintf.h-mask-additional-include.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
