--- a/series.conf
+++ b/series.conf
@@ -33163,6 +33163,7 @@
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
+	patches.suse/hfsplus-make-splice-write-available-again.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
