hfs: make splice write available again (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33164,6 +33164,7 @@
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 	patches.suse/hfsplus-make-splice-write-available-again.patch
+	patches.suse/hfs-make-splice-write-available-again.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
