s390/entry: Fix last breaking event handling in case of stack corruption (git-fixes bsc#1243806).

--- a/series.conf
+++ b/series.conf
@@ -32254,6 +32254,7 @@
 	patches.suse/dm-fix-copying-after-src-array-boundaries.patch
 	patches.suse/btrfs-correct-the-order-of-prelim_ref-arguments-in-b.patch
 	patches.suse/btrfs-avoid-NULL-pointer-dereference-if-no-valid-csu.patch
+	patches.suse/s390-entry-Fix-last-breaking-event-handling-in-case-of-sta.patch
 	patches.suse/s390-pci-Fix-missing-check-for-zpci_create_device-error-return.patch
 	patches.suse/s390-pci-Fix-duplicate-pci_dev_put-in-disable_slot-w.patch
 	patches.suse/sch_htb-make-htb_deactivate-idempotent.patch
