--- a/series.conf
+++ b/series.conf
@@ -33163,6 +33163,7 @@
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
+	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/hfsplus-make-splice-write-available-again.patch
 	patches.suse/hfs-make-splice-write-available-again.patch
 	patches.suse/hfsplus-remove-mutex_lock-check-in-hfsplus_free_extents.patch
