x86/Kconfig: Always enable ARCH_SPARSEMEM_ENABLE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7680,6 +7680,7 @@
 	patches.suse/bpf-abort-verification-if-env-cur_state-loop_entry-N.patch
 	patches.suse/bpf-Search-and-add-kfuncs-in-struct_ops-prologue-and.patch
 	patches.suse/bpf-Fix-deadlock-between-rcu_tasks_trace-and-event_m.patch
+	patches.suse/x86-Kconfig-Always-enable-ARCH_SPARSEMEM_ENABLE.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-mm-pat-Fix-VM_PAT-handling-when-fork-fails-in-copy_pag.patch
 	patches.suse/x86-microcode-AMD-Fix-__apply_microcode_amd-s-return-value.patch
