--- a/series.conf
+++ b/series.conf
@@ -7682,6 +7682,7 @@
 	patches.suse/bpf-Fix-deadlock-between-rcu_tasks_trace-and-event_m.patch
 	patches.suse/x86-Kconfig-Always-enable-ARCH_SPARSEMEM_ENABLE.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
+	patches.suse/x86-entry-Fix-ORC-unwinder-for-PUSH_REGS-with-save_ret-1.patch
 	patches.suse/x86-mm-pat-Fix-VM_PAT-handling-when-fork-fails-in-copy_pag.patch
 	patches.suse/x86-microcode-AMD-Fix-__apply_microcode_amd-s-return-value.patch
 	patches.suse/module-Begin-to-move-from-RCU-sched-to-RCU.patch
