x86/fred/signal: Prevent immediate repeat of single step trap on return from SIGTRAP handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9863,6 +9863,7 @@
 	patches.suse/nvme-always-punt-polled-uring_cmd-end_io-work-to-tas.patch
 	patches.suse/pidfs-never-refuse-ppid-0-in-PIDFD_GET_INFO.patch
 	patches.suse/powerpc-eeh-Fix-missing-PE-bridge-reconfiguration-du.patch
+	patches.suse/x86-fred-signal-Prevent-immediate-repeat-of-single-step-tr.patch
 	patches.suse/x86-virt-tdx-Avoid-indirect-calls-to-TDX-assembly-function.patch
 	patches.suse/x86-mm-pat-don-t-collapse-pages-without-PSE-set.patch
 	patches.suse/x86-Kconfig-only-enable-ROX-cache-in-execmem-when-STRICT_M.patch
