--- a/series.conf
+++ b/series.conf
@@ -6628,6 +6628,7 @@
 	patches.suse/x86-usercopy-Fix-kernel-doc-func-param-name-in-clean_cache.patch
 	patches.suse/selftests-x86-syscall-Fix-coccinelle-WARNING-recomme.patch
 	patches.suse/x86-coco-Replace-static-const-cc_mask-with-the-newly-intro.patch
+	patches.suse/x86-platform-olpc-Remove-unused-variable-len-in-olpc_dt_co.patch
 	patches.suse/usb-typec-tcpm-Switch-to-use-hrtimer_setup.patch
 	patches.suse/perf-dwc_pcie-fix-duplicate-pci_dev-devices.patch
 	patches.suse/arch_topology-init-capacity_freq_ref-to-0.patch
