--- a/series.conf
+++ b/series.conf
@@ -10105,6 +10105,7 @@
 	patches.suse/x86-mce-Don-t-remove-sysfs-if-thresholding-sysfs-init-fail.patch
 	patches.suse/x86-mce-Ensure-user-polling-settings-are-honored-when-rest.patch
 	patches.suse/x86-mce-amd-Add-default-names-for-MCA-banks-and-blocks.patch
+	patches.suse/x86-mce-Make-sure-CMCI-banks-are-cleared-during-shutdown-o.patch
 	patches.suse/perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock-protected-region.patch
 	patches.suse/perf-Revert-to-requiring-CAP_SYS_ADMIN-for-uprobes.patch
 	patches.suse/objtool-Add-missing-endian-conversion-to-read_annotate.patch
