x86/boot: Sanitize boot params before parsing command line (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6186,6 +6186,7 @@
 	patches.suse/hwmon-ntc_thermistor-Fix-the-ncpXXxh103-sensor-table.patch
 	patches.suse/hwmon-ad7314-Validate-leading-zero-bits-and-return-e.patch
 	patches.suse/hwmon-fix-a-NULL-vs-IS_ERR_OR_NULL-check-in-xgene_hw.patch
+	patches.suse/x86-boot-Sanitize-boot-params-before-parsing-command-line.patch
 	patches.suse/perf-core-Fix-pmus_lock-vs.-pmus_srcu-ordering.patch
 	patches.suse/perf-core-Fix-perf_pmu_register-vs.-perf_init_event.patch
 	patches.suse/sched-fair-Fix-potential-memory-corruption-in-child_cfs_rq_on_list.patch
