--- a/series.conf
+++ b/series.conf
@@ -6512,6 +6512,7 @@
 	patches.suse/cgroup-rstat-Fix-forceidle-time-in-cpu.stat.patch
 	patches.suse/bitmap-Align-documentation-between-bitmap_gather-and.patch
 	patches.suse/Flush-console-log-from-kernel_power_off.patch
+	patches.suse/x86-locking-Use-ALT_OUTPUT_SP-for-percpu_-try_-cmpxchg-64-.patch
 	patches.suse/lockdep-mm-Fix-might_fault-lockdep-check-of-current-mm-mmap_lock.patch
 	patches.suse/lockdep-Don-t-disable-interrupts-on-RT-in-disable_ir.patch
 	patches.suse/x86-traps-Make-exc_double_fault-consistently-noreturn.patch
