x86/nmi: Add an emergency handler in nmi_desc & use it in nmi_shootdown_cpus() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6604,6 +6604,7 @@
 	patches.suse/x86-ibt-Clean-up-poison_endbr.patch
 	patches.suse/x86-early_printk-Harden-early_serial.patch
 	patches.suse/x86-ibt-Handle-FineIBT-in-handle_cfi_failure.patch
+	patches.suse/x86-nmi-Add-an-emergency-handler-in-nmi_desc-use-it-in-nmi.patch
 	patches.suse/x86-cfi-Add-cfi-warn-boot-option.patch
 	patches.suse/x86-ibt-Add-exact_endbr-helper.patch
 	patches.suse/x86-alternatives-Clean-up-preprocessor-conditional-block-c.patch
