xfs: only create event xfs_file_compat_ioctl when CONFIG_COMPAT is configure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33174,6 +33174,7 @@
 	patches.suse/xfs-remove-unused-event-xfs_alloc_near_nominleft.patch
 	patches.suse/xfs-remove-unused-event-xfs_pagecache_inval.patch
 	patches.suse/xfs-remove-usused-xfs_end_io_direct-events.patch
+	patches.suse/xfs-only-create-event-xfs_file_compat_ioctl-when-CONFIG_COMPAT-is-configure.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 	patches.suse/hfsplus-make-splice-write-available-again.patch
