xfs: remove unused event xfs_pagecache_inval (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10300,6 +10300,7 @@
 	patches.suse/xfs-remove-unused-event-xfs_attr_node_removename.patch
 	patches.suse/xfs-remove-unused-event-xfs_alloc_near_error.patch
 	patches.suse/xfs-remove-unused-event-xfs_alloc_near_nominleft.patch
+	patches.suse/xfs-remove-unused-event-xfs_pagecache_inval.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 
